--- a/dEyeCSS.css
+++ b/dEyeCSS.css
@@ -1,12 +1,19 @@
 .featured-image {
+    background-size: cover;
     width: 100%;
     height: 100%;
-  /*opacity: 0.90;*/
+}
+
+.menuBarObject {
+    position: absolute;
+    z-index: 10;
+    top: 90%;
+    left: 35%;
 }
 
 .dEyeLogo {
     position: absolute;
-    left: 25%;
+    left: 26%;
     top: 30%;
     width: 50%;
     height: 50%;
@@ -14,7 +21,7 @@
 
 .svgSeparator {
     position: absolute;
-    left: 22%;
+    left: 23%;
     top: 20%;
     fill: white;
     opacity: 0.15;
