Added faded loading of background images.

--- a/dEyeCSS.css
+++ b/dEyeCSS.css
@@ -2,6 +2,13 @@
     background-size: cover;
     width: 100%;
     height: 100%;
+
+    /* Webkit browsers */
+    -webkit-animation: showFeaturedImageWebkit 4s;
+
+    /* Mozilla Firefox */
+    animation-duration: 4s;
+    animation-name: showFeaturedImageMozilla;
 }
 
 .menuBarObject {
@@ -13,6 +20,7 @@
 
 .dEyeLogo {
     position: absolute;
+    z-index: 20;
     left: 26%;
     top: 30%;
     width: 50%;
@@ -21,8 +29,21 @@
 
 .svgSeparator {
     position: absolute;
+    z-index: 10;
     left: 23%;
     top: 20%;
     fill: white;
     opacity: 0.15;
+}
+
+/* Webkit browsers */
+@-webkit-keyframes showFeaturedImageWebkit {
+    from { opacity: 0; }
+    to { opacity: 1; }
+}
+
+/* Mozilla Firefox */
+@keyframes showFeaturedImageMozilla {
+    from { opacity: 0; }
+    to { opacity: 1; }
 }
